--- a/index.html
+++ b/index.html
@@ -7,10 +7,52 @@
     <meta name="keywords" content="Odin Admin Dashboard, Odin, Admin Dashboard">
     <meta name="author" content="Maximilian NDev">
     <title>Admin Dashboard</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header>
+            <h1>Statistics</h1>
+
+            <div class="profile-shortcuts">
+                <img src="" alt="Search icon">
+                <img src="" alt="Notifications icon">
+                <img src="" alt="Avatar">
+                <p>User name</p>
+            </div>
+        </header>
+
+        <aside>
+            <div class="logo-container">
+                <img src="./assets/logo.png" alt="Logo image" class="logo">
+            </div>
+
+            <nav>
+                <a href="#" class="active"><img src="./assets/dashboard.svg" alt="Dashboard icon"> Dashboard</a>
+                <a href="#"><img src="./assets/app.svg" alt="Projects icon"> Projects</a>
+                <a href="#"><img src="./assets/activity.svg" alt="Activity icon"> Activity</a>
+                <a href="#"><img src="./assets/calendar.svg" alt="Calendar icon"> Calendar</a>
+            </nav>
+
+            <nav>
+                <a href="#"><img src="./assets/settings.svg" alt="Settings icon"> Settings</a>
+                <a href="#"><img src="./assets/folders.svg" alt="Privacy icon"> Privacy</a>
+            </nav>
+        </aside>
+
+        <main>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </main>
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
