--- a/index.html
+++ b/index.html
@@ -16,12 +16,26 @@
     <div class="wrapper">
         <header>
             <h1>Statistics</h1>
+            <!-- <div class="search-field">
+                <label for="search"><span class="search-icon"></span></label>
+                <input type="search" name="search" id="search">
+            </div> -->
+
+            
 
             <div class="profile-shortcuts">
-                <img src="" alt="Search icon">
-                <img src="" alt="Notifications icon">
-                <img src="" alt="Avatar">
-                <p>User name</p>
+                <div class="profile-icons">
+                    <div class="search-field">
+                        <label for="search"><span class="search-icon"></span></label>
+                        <input type="search" name="search" id="search">
+                    </div>
+                    <img src="./assets/notifications.svg" alt="Notifications icon">
+                </div>
+
+                <div class="profile-name">
+                    <img src="./assets/avatar.png" alt="Avatar">
+                    <p>Darrell Steward</p>
+                </div>
             </div>
         </header>
 
