Style stats module

--- a/index.html
+++ b/index.html
@@ -9,20 +9,14 @@
     <title>Admin Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>Statistics</h1>
-            <!-- <div class="search-field">
-                <label for="search"><span class="search-icon"></span></label>
-                <input type="search" name="search" id="search">
-            </div> -->
-
+            <h1>Overview</h1>
             
-
             <div class="profile-shortcuts">
                 <div class="profile-icons">
                     <div class="search-field">
@@ -58,12 +52,35 @@
         </aside>
 
         <main>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+           
+            <div class="big-slide">
+                <div class="total">
+                    <img src="./assets/VectorCircle.png" alt="">
+                    <h1>31</h1>
+                    <p>projects</p>
+                </div>
+
+                <div class="completed">
+                    <img src="./assets/VectorCompleted.png" alt="">
+                    <h1>27</h1>
+                    <p>completed</p>
+                </div>
+
+                <div class="in-progress">
+                    <img src="./assets/VectorProgress.png" alt="">
+                    <h1>4</h1>
+                    <p>on progress</p>
+                </div>
+            </div>
+            <div class="small-slide">
+                <h1>Project blah blah</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, enim! Esse reprehenderit soluta incidunt beatae facere adipisci natus autem nam repudiandae, rem tempore saepe cum sint exercitationem iusto voluptate nihil!</p>
+            </div>
+            <div class="small-slide">
+                <h1>Project blah blah</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, enim! Esse reprehenderit soluta incidunt beatae facere adipisci natus autem nam repudiandae, rem tempore saepe cum sint exercitationem iusto voluptate nihil!</p>
+            </div>
+            <div class="side-info"></div>
         </main>
     </div>
 
