Style projects module

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                     <p>on progress</p>
                 </div>
             </div>
-            <div class="small-slide">
-                <h1>Project blah blah</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, enim! Esse reprehenderit soluta incidunt beatae facere adipisci natus autem nam repudiandae, rem tempore saepe cum sint exercitationem iusto voluptate nihil!</p>
+            <div class="small-slide calculator">
+                <h1>Calculator Project</h1>
+                <a href="#"><img src="./assets/Frame.svg" class="open-project"></a>
             </div>
-            <div class="small-slide">
-                <h1>Project blah blah</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, enim! Esse reprehenderit soluta incidunt beatae facere adipisci natus autem nam repudiandae, rem tempore saepe cum sint exercitationem iusto voluptate nihil!</p>
+            <div class="small-slide sketch">
+                <h1>Etch a Sketch Project</h1>
+                <a href="#"><img src="./assets/Frame.svg" class="open-project"></a>
             </div>
             <div class="side-info"></div>
         </main>
