--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <nav>
                 <a href="#"><img src="./assets/settings.svg" alt="Settings icon"> Settings</a>
-                <a href="#"><img src="./assets/folders.svg" alt="Privacy icon"> Privacy</a>
+                <a href="#"><img src="./assets/privacy.svg" alt="Privacy icon"> Privacy</a>
             </nav>
         </aside>
 
@@ -72,15 +72,71 @@
                     <p>on progress</p>
                 </div>
             </div>
+
             <div class="small-slide calculator">
                 <h1>Calculator Project</h1>
                 <a href="#"><img src="./assets/Frame.svg" class="open-project"></a>
             </div>
+
             <div class="small-slide sketch">
                 <h1>Etch a Sketch Project</h1>
                 <a href="#"><img src="./assets/Frame.svg" class="open-project"></a>
             </div>
-            <div class="side-info"></div>
+
+            <div class="side-info">
+                <div class="task-container">
+                    <p class="task-container-header">Tasks in progress</p>
+
+                    <div class="task">
+                        <div class="task-name">
+                            <h3>Ut sagittis volutpat</h3>
+                            <p>Sit lectus nunc morbi mauris mauris mauris neque vitae.</p>
+                        </div>
+
+                        <div class="task-info">
+                            <a href="#"><img src="./assets/arrowRight.svg"></a>
+                            <div class="task-progress">
+                                <p>91%</p>
+                                <span>/ 100</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr>
+
+                    <div class="task">
+                        <div class="task-name">
+                            <h3>Quis enim</h3>
+                            <p>Elementum non nunc tortor pellentesque arcu pellentesque.</p>
+                        </div>
+
+                        <div class="task-info">
+                            <a href="#"><img src="./assets/arrowRight.svg"></a>
+                            <div class="task-progress">
+                                <p>34%</p>
+                                <span>/ 100</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr>
+
+                    <div class="task">
+                        <div class="task-name">
+                            <h3>Viverra sed</h3>
+                            <p>Aliquet velit tristique lorem purus id ipsum eget molestie eget.</p>
+                        </div>
+
+                        <div class="task-info">
+                            <a href="#"><img src="./assets/arrowRight.svg"></a>
+                            <div class="task-progress">
+                                <p>57%</p>
+                                <span>/ 100</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 
