Improve visual hierarchy and spacing

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="task">
                         <div class="task-name">
                             <h3>Quis enim</h3>
-                            <p>Elementum non nunc tortor pellentesque arcu pellentesque.</p>
+                            <p>Elementum non nunc tortor pellentesque arcu.</p>
                         </div>
 
                         <div class="task-info">
