--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="profile-shortcuts">
                 <div class="profile-icons">
                     <div class="search-field">
-                        <label for="search"><span class="search-icon"></span></label>
+                        <label for="search" aria-label="search-field"><span class="search-icon"></span></label>
                         <input type="search" name="search" id="search">
                     </div>
                     <img src="./assets/notifications.svg" alt="Notifications icon">
@@ -75,12 +75,12 @@
 
             <div class="small-slide calculator">
                 <h1>Calculator Project</h1>
-                <a href="#"><img src="./assets/Frame.svg" class="open-project"></a>
+                <a href="#" aria-label="Open project"><img src="./assets/Frame.svg" class="open-project" alt="Project preview"></a>
             </div>
 
             <div class="small-slide sketch">
                 <h1>Etch a Sketch Project</h1>
-                <a href="#"><img src="./assets/Frame.svg" class="open-project"></a>
+                <a href="#" aria-label="Open project"><img src="./assets/Frame.svg" class="open-project" alt="Project preview"></a>
             </div>
 
             <div class="side-info">
@@ -89,12 +89,12 @@
 
                     <div class="task">
                         <div class="task-name">
-                            <h3>Ut sagittis volutpat</h3>
+                            <h1>Ut sagittis volutpat</h1>
                             <p>Sit lectus nunc morbi mauris mauris mauris neque vitae.</p>
                         </div>
 
                         <div class="task-info">
-                            <a href="#"><img src="./assets/arrowRight.svg"></a>
+                            <a href="#" aria-label="Open task"><img src="./assets/arrowRight.svg" alt="Open icon"></a>
                             <div class="task-progress">
                                 <p>91%</p>
                                 <span>/ 100</span>
@@ -106,12 +106,12 @@
 
                     <div class="task">
                         <div class="task-name">
-                            <h3>Quis enim</h3>
+                            <h1>Quis enim</h1>
                             <p>Elementum non nunc tortor pellentesque arcu.</p>
                         </div>
 
                         <div class="task-info">
-                            <a href="#"><img src="./assets/arrowRight.svg"></a>
+                            <a href="#" aria-label="Open task"><img src="./assets/arrowRight.svg" alt="Open icon"></a>
                             <div class="task-progress">
                                 <p>34%</p>
                                 <span>/ 100</span>
@@ -123,12 +123,12 @@
 
                     <div class="task">
                         <div class="task-name">
-                            <h3>Viverra sed</h3>
+                            <h1>Viverra sed</h1>
                             <p>Aliquet velit tristique lorem purus id ipsum eget molestie eget.</p>
                         </div>
 
                         <div class="task-info">
-                            <a href="#"><img src="./assets/arrowRight.svg"></a>
+                            <a href="#" aria-label="Open task"><img src="./assets/arrowRight.svg" alt="Open icon"></a>
                             <div class="task-progress">
                                 <p>57%</p>
                                 <span>/ 100</span>
